# mini-speaker

./: .gitignore  LED状态灯控制.txt  settings.gradle  升级接口调用.txt  按键值处理-广播.txt  电话状态广播监听.txt  短信格式.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/flyscale/alertor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/flyscale/: IFlyscaleManager.aidl
app/src/main/aidl/com/abupdate/fota_demo_iot/: ICheckVersionAidlInter.aidl  IDownloadAidlInter.aidl  IGetDeviceInfoAidlInter.aidl  IOtaInter.aidl  IUpdateAidlInter.aidl
app/src/main/assets/: ca.bks  ca.crt  client.bks  client.crt  client.key  litepal.xml  pkcs8_client.key  密钥口令.txt
app/src/main/assets/common/: 1.java
app/src/main/assets/leading/: MP3AQDY.AMR  MP3BQDY.AMR  MP3CQDY.AMR  MP3DQDY.AMR  MP3EQDY.AMR  MP3FQDY.AMR  MP3GQDY.AMR  MP3HQDY.AMR  MP3IQDY.AMR  MP3JQDY.AMR  MP3KQDY.AMR  MP3LQDY.AMR  MP3MQDY.AMR  MP3NQDY.AMR  MP3OQDY.AMR  MP3PQDY.AMR
app/src/main/assets/normal/: GUOGE.AMR  MP3A.AMR  MP3B.AMR  MP3C.AMR  MP3D.AMR  MP3E.AMR  MP3F.AMR  MP3G.AMR  MP3H.AMR  MP3I.AMR  MP3J.AMR  MP3K.AMR  MP3L.AMR  MP3M.AMR  MP3N.AMR  MP3O.AMR  MP3P.AMR
app/src/main/cpp/: NativeHelper.cpp  com_flyscale_alertor_jni_NativeHelper.h  des.cpp  des.h
app/src/main/java/android/flyscale/: FlyscaleManager.java
app/src/main/java/com/flyscale/alertor/: Constants.java  FotaAction.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: config.xml  strings.xml
app/src/test/java/com/flyscale/alertor/: ExampleUnitTest.java
(+157 files in other folders)
